create btn style css modifire

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <a href="#">fds</a>
         <li>1</li>
         <li>1</li>
+        <button class="btn btn--outline">ارسال به پست</button>
+        <button class="btn btn--primary">ارسال به پست</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat numquam minima aliquid praesentium nostrum ea, reprehenderit sed quibusdam, voluptatem excepturi blanditiis! Dolore, voluptatum ullam id magni eum nobis possimus optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, consectetur inventore harum nisi aut impedit saepe, dolores aliquid vitae error quam culpa eum? Corporis dignissimos, animi vero officiis beatae ipsam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, veritatis eius, cupiditate voluptatem minima recusandae esse qui accusantium earum perspiciatis consequuntur iste omnis aliquam quos voluptatibus dolor quas nemo culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum corrupti, deleniti modi soluta suscipit, esse eius rem voluptates assumenda rerum voluptatibus quo ex enim ut aspernatur. Ullam, temporibus nam.</p>
         <p>
             بانواز برای مدیریت و کنترل سنسورهای خودش از یک دستگاه مرکزی استفاده میکنه که همه چیز تحت کنترل همین دستگاه مرکزیه.
