to fix hero section

--- a/index.html
+++ b/index.html
@@ -6,25 +6,21 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.css">
     <title>banavaz</title>
-</head>
+</head> 
 <body>
-    <header class="header block">
-        <img src="assets/image/Logo.svg" alt="">
-        <div class="header__menu">
-            <button class="btn btn--small btn--primary">فروشگاه بانواز</button>
-            <ul class="menu__links">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <div class="menu__toggler ">
-                <div class="bar bar-1"></div>
-                <div class="bar bar-2"></div>
-                <div class="bar bar-3"></div>
-            </div>
-        </div>
-    </header>
+   <section class="hero block">
+    <div class="hero__image">
+        <img src="assets/image/container/building.svg" alt="">
+    </div>
+    <div class="hero__caption">
+        <h1>خیالت از خونه راحت!</h1>
+        <p>
+            بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
+با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
+چه خونه باشی چه نه. 
+        </p>
+        <button class="btn btn--primary">فروشگاه بانواز</button>
+    </div>
+   </section>
 </body>
 </html>
