--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>banavaz</title>
 </head> 
 <body>
-   <section class="hero block">
+   <section class="hero block container">
     <div class="hero__image">
         <img src="assets/image/container/building.svg" alt="">
     </div>
@@ -19,7 +19,7 @@
 با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
 چه خونه باشی چه نه. 
         </p>
-        <button class="btn btn--primary">فروشگاه بانواز</button>
+        <button class="btn btn--small btn--white">فروشگاه بانواز</button>
     </div>
    </section>
 </body>
