fix categiries responsive

--- a/index.html
+++ b/index.html
@@ -8,19 +8,31 @@
     <title>banavaz</title>
 </head> 
 <body>
-   <section class="hero block container">
-    <div class="hero__image">
-        <img src="assets/image/container/building.svg" alt="">
-    </div>
-    <div class="hero__caption">
-        <h1>خیالت از خونه راحت!</h1>
-        <p>
-            بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
-با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
-چه خونه باشی چه نه. 
-        </p>
-        <button class="btn btn--small btn--white">فروشگاه بانواز</button>
-    </div>
+   <section class="categories container block">
+        <div class="categories__item">
+            <img src="assets/image/product-list/item1.svg" alt="">
+            <p>حیوانات</p>
+        </div>
+        <div class="categories__item">
+            <img src="assets/image/product-list/item2.svg   " alt="">
+            <p>درب و پنجره</p>
+        </div>
+        <div class="categories__item">
+            <img src="assets/image/product-list/item3.svg" alt="">
+            <p>گرمایی</p>
+        </div>
+        <div class="categories__item">
+            <img src="assets/image/product-list/item4.svg" alt="">
+            <p>روشنایی</p>
+        </div>
+        <div class="categories__item">
+            <img src="assets/image/product-list/item5.svg" alt="">
+            <p>وسایل برقی</p>
+        </div>
+        <div class="categories__item">
+            <img src="assets/image/product-list/plant-fill.svg" alt="">
+            <p>گل و گیاه</p>
+        </div>
    </section>
 </body>
 </html>
