create introduction section & responsive and fixed all hero section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
     <title>banavaz</title>
 </head> 
 <body>
-   <section class="categories container block">
+    <section class="container hero-main">
+        <div class="hero block ">
+            <div class="hero__image">
+                <img src="assets/image/container/building.svg" alt="">
+            </div>
+            <div class="hero__caption">
+                <h1>خیالت از خونه راحت!</h1>
+                <p>
+                    بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
+                    با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
+                    چه خونه باشی چه نه. 
+                </p>
+                <button class="btn btn--small btn--white">فروشگاه بانواز</button>
+            </div>
+        </div>
+
+    <div class="categories block-y">
         <div class="categories__item">
             <img src="assets/image/product-list/item1.svg" alt="">
             <p>حیوانات</p>
         </div>
         <div class="categories__item">
-            <img src="assets/image/product-list/item2.svg   " alt="">
+            <img src="assets/image/product-list/item2.svg" alt="">
             <p>درب و پنجره</p>
         </div>
         <div class="categories__item">
@@ -33,6 +49,20 @@
             <img src="assets/image/product-list/plant-fill.svg" alt="">
             <p>گل و گیاه</p>
         </div>
-   </section>
+   </div>
+   <div class="introduction block">
+    <div class="introduction__image block-y">
+        <img src="assets/image/product-list/consol.svg" alt="">
+    </div>
+    <div class="introduction__text blok-y">
+        <h2>مدیریت با دستگاه مرکزی</h2>
+        <p>
+            بانواز برای مدیریت و کنترل سنسورهای خودش از یک دستگاه مرکزی استفاده میکنه که همه چیز تحت کنترل همین دستگاه مرکزیه.
+            دستگاه به کمک اینترنت به گوشی شما متصل میشه و شما میتونین همه چیز رو تحت کنترل خودتون بگیرین.
+        </p>
+    </div>
+   </div>
+    </section>
+
 </body>
 </html>
